# prediction_de_sechresse

./: gen_report.js  gen_report_emi.js  package-lock.json  package.json  rapport_emi_secheresse_maroc.docx  rapport_prediction_secheresse_maroc.docx  ~$pport_emi_secheresse_maroc.docx
lab2/: Lab_intro.ipynb
lab2_solution/: Lab2_Solution.ipynb
mini_projet/: app.py  drought_model.pkl  requirements.txt  train_model.py  weather_data.py
pipeline/: pipeline.py
pipeline/_cache/: Bouregreg.csv  Draa-Ziz-Guir.csv  Loukkos.csv  Moulouya.csv  Oum_Er-Rbia.csv  Sebou.csv  Souss-Massa.csv  Tangerois.csv  Tensift.csv
web/: get_map.py  index.html  package-lock.json  package.json  tailwind.config.js
web/_hydro_tmp/: hybas_af_lev04_v1c.dbf  hybas_af_lev04_v1c.sbn  hybas_af_lev04_v1c.sbx  hybas_af_lev04_v1c.shp.xml  hybas_af_lev04_v1c.shx
web/data brute (1)/data brute/: Agadir_raw_data.csv  Fes_raw_data.csv  Marrakech_raw_data.csv  Ouarzazate_raw_data.csv  Rabat_raw_data.csv  casa_raw_data.csv  errachidia_raw_data.csv  meknes_raw_data.csv  ml.py  ouajda_raw_data.csv  pyproject.toml  run_preprocessing.py  test_data.csv  train_data.csv  val_data.csv
web/public/: bassins.geojson  predictions.json
web/src/: App.jsx  index.css  main.jsx
web/src/components/: AlertList.jsx  KpiCard.jsx  MapCard.jsx  ModelsCard.jsx  Navbar.jsx  PipelineCard.jsx  ShapChart.jsx  SpiChart.jsx
web/src/context/: PredictionsContext.jsx
web/src/data/: basins.js  chartData.js
web/src/hooks/: useCounter.js
web/src/lib/: chartSetup.js
